tests/baselines/reference/es6ImportEqualsDeclaration.errors.txt
tests/cases/compiler/client.ts(1,1): error TS1192: Deprecated syntax
tests/cases/compiler/server.ts(3,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/server.ts(3,1): error TS1192: Deprecated syntax


==== tests/cases/compiler/client.ts (1 errors) ====
    import a = require("server");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1192: Deprecated syntax
==== tests/cases/compiler/server.ts (2 errors) ====
    
    var a = 10;
    export = a;
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~
!!! error TS1192: Deprecated syntax
    